--- a/src/notebooks/web_data_3b.ipynb
+++ b/src/notebooks/web_data_3b.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
@@ -22,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List,Tuple"
+    "from typing import Optional,List,Tuple,Union"
    ]
   },
   {
@@ -48,11 +49,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrape_sbu_solar(url: str, major_three_letter_code: str, wait_time: int = 10, headless: bool = True, verbose: bool = False) -> pd.DataFrame:\n",
+    "def scrape_sbu_solar(url: str, major_three_letter_code: str, wait_time: int = 10, headless: bool = True, verbose: bool = False, output_filename: Optional[str] = None) -> Union[pd.DataFrame,str]:\n",
     "    # TODO:\n",
     "    #   Add docstring\n",
     "    #   Add type hints\n",
     "    #   Add no show option\n",
+    "\n",
+    "    # Verify output_filename\n",
+    "    if output_filename is not None:\n",
+    "        output_filename: str = os.path.abspath(output_filename)\n",
+    "        _return_json: bool = True\n",
+    "    else:\n",
+    "        _return_json: bool = False\n",
     "\n",
     "    # Verify wait time is integer and greater than 0\n",
     "    wait_time: int = int(wait_time)\n",
@@ -138,6 +146,7 @@
     "    academic_group_list: List[str] = []\n",
     "    academic_organization_list: List[str] = []\n",
     "    description_list: List[str] = []\n",
+    "    course_numbers_with_three_letter_code: List[str] = []\n",
     "\n",
     "    if verbose:\n",
     "        print(f\"\\nScraping course information for {major_three_letter_code}...\\n\")\n",
@@ -216,6 +225,9 @@
     "        except NoSuchElementException:\n",
     "            description: str = \"\"\n",
     "\n",
+    "        # Update course number with three letter code\n",
+    "        course_numbers_with_three_letter_code.append(f\"{major_three_letter_code} {course}\")\n",
+    "\n",
     "        # Update lists\n",
     "        career_list.append(career)\n",
     "        units_list.append(units)\n",
@@ -232,6 +244,8 @@
     "        ).click()\n",
     "\n",
     "    # Update DataFrame\n",
+    "    # df.insert(0, \"Course Nbr\", course_numbers_with_three_letter_code)\n",
+    "    df[\"Course Nbr\"] = course_numbers_with_three_letter_code\n",
     "    df.insert(df.columns.__len__(), \"Career\", career_list)\n",
     "    df.insert(df.columns.__len__(), \"Units\", units_list)\n",
     "    df.insert(df.columns.__len__(), \"Grading Basis\", grading_basis_list)\n",
@@ -244,7 +258,10 @@
     "    # Quit the driver, close the browser\n",
     "    driver.quit()\n",
     "\n",
-    "    return df"
+    "    if _return_json:\n",
+    "        return df.to_json(output_filename, orient=\"records\", indent=4)\n",
+    "    else:\n",
+    "        return df"
    ]
   },
   {
@@ -475,265 +492,17 @@
       "Processing course: 701...\n",
       "Processing course: 800...\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Course Nbr</th>\n",
-       "      <th>Course Title</th>\n",
-       "      <th>Career</th>\n",
-       "      <th>Units</th>\n",
-       "      <th>Grading Basis</th>\n",
-       "      <th>Enrollment Requirement</th>\n",
-       "      <th>Course Components</th>\n",
-       "      <th>Academic Group</th>\n",
-       "      <th>Academic Organization</th>\n",
-       "      <th>Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>101</td>\n",
-       "      <td>Computer Science Principles</td>\n",
-       "      <td>Undergraduate</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>Student Option</td>\n",
-       "      <td>Prerequisite: Level 3 or higher on the mathema...</td>\n",
-       "      <td>(Laboratory, Lecture)</td>\n",
-       "      <td>Engring &amp; App Sci, College of</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Introduces central ideas of computing and comp...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>102</td>\n",
-       "      <td>Introduction to Web Design and Programming</td>\n",
-       "      <td>Undergraduate</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>Student Option</td>\n",
-       "      <td>Advisory Prerequisite: CSE 101 or basic comput...</td>\n",
-       "      <td>(Lecture,)</td>\n",
-       "      <td>College of Engring &amp; App Sci</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>An introduction to the design of Web pages, sp...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>110</td>\n",
-       "      <td>Introduction to Computer Science</td>\n",
-       "      <td>Undergraduate</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>Student Option</td>\n",
-       "      <td>Prerequisite: Level 3 or higher on the mathema...</td>\n",
-       "      <td>(Laboratory, Lecture)</td>\n",
-       "      <td>College of Engring &amp; App Sci</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>An introduction to fundamentals of computer sc...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(113)</td>\n",
-       "      <td>Foundations of Computer Science I\\n\\n** availa...</td>\n",
-       "      <td>Undergraduate</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>A Through F Undergraduate</td>\n",
-       "      <td>Prerequisite: AMS 151 or MAT 125 or MAT 131 or...</td>\n",
-       "      <td>(Lecture, Recitation)</td>\n",
-       "      <td>Engring &amp; App Sci, College of</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Introduction to the mathematical foundations o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>114</td>\n",
-       "      <td>Introduction to Object-Oriented Programming</td>\n",
-       "      <td>Undergraduate</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>A Through F Undergraduate</td>\n",
-       "      <td>Prerequisite: Level 5 or higher on the math pl...</td>\n",
-       "      <td>(Laboratory, Lecture)</td>\n",
-       "      <td>Engring &amp; App Sci, College of</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>An introduction to procedural and object-orien...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>698</td>\n",
-       "      <td>Practicum in Teaching</td>\n",
-       "      <td>Graduate</td>\n",
-       "      <td>0.00 - 3.00</td>\n",
-       "      <td>Graduate Graded</td>\n",
-       "      <td></td>\n",
-       "      <td>(Tutorial,)</td>\n",
-       "      <td>Engring &amp; App Sci, College of</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Supervised teaching in a course identified by ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>699</td>\n",
-       "      <td>Dissertation Research on Campus</td>\n",
-       "      <td>Graduate</td>\n",
-       "      <td>0.00 - 9.00</td>\n",
-       "      <td>Satisfactory/Unsatisfactory</td>\n",
-       "      <td></td>\n",
-       "      <td>(Tutorial,)</td>\n",
-       "      <td>Engring &amp; App Sci, College of</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Thesis research for PhD students who have adva...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>700</td>\n",
-       "      <td>Dissertation Research off Campus - Domestic</td>\n",
-       "      <td>Graduate</td>\n",
-       "      <td>0.00 - 9.00</td>\n",
-       "      <td>Satisfactory/Unsatisfactory</td>\n",
-       "      <td>Prerequisite: G5 Standing</td>\n",
-       "      <td>(Tutorial,)</td>\n",
-       "      <td>Engring &amp; App Sci, College of</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Prerequisite: Must be advanced to candidacy (G...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>701</td>\n",
-       "      <td>Dissertation Research off Campus - International</td>\n",
-       "      <td>Graduate</td>\n",
-       "      <td>0.00 - 9.00</td>\n",
-       "      <td>Satisfactory/Unsatisfactory</td>\n",
-       "      <td>Prerequisite: G5 Standing</td>\n",
-       "      <td>(Tutorial,)</td>\n",
-       "      <td>Engring &amp; App Sci, College of</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Prerequisite: Must be advanced to candidacy (G...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>205</th>\n",
-       "      <td>800</td>\n",
-       "      <td>FT SUMMER RESEARCH</td>\n",
-       "      <td>Graduate</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>Satisfactory/Unsatisfactory</td>\n",
-       "      <td></td>\n",
-       "      <td>(Tutorial,)</td>\n",
-       "      <td>College of Engring &amp; App Sci</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>206 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Course Nbr                                       Course Title  \\\n",
-       "0          101                        Computer Science Principles   \n",
-       "1          102         Introduction to Web Design and Programming   \n",
-       "2          110                   Introduction to Computer Science   \n",
-       "3        (113)  Foundations of Computer Science I\\n\\n** availa...   \n",
-       "4          114        Introduction to Object-Oriented Programming   \n",
-       "..         ...                                                ...   \n",
-       "201        698                              Practicum in Teaching   \n",
-       "202        699                    Dissertation Research on Campus   \n",
-       "203        700        Dissertation Research off Campus - Domestic   \n",
-       "204        701   Dissertation Research off Campus - International   \n",
-       "205        800                                 FT SUMMER RESEARCH   \n",
-       "\n",
-       "            Career        Units                Grading Basis  \\\n",
-       "0    Undergraduate         3.00               Student Option   \n",
-       "1    Undergraduate         3.00               Student Option   \n",
-       "2    Undergraduate         3.00               Student Option   \n",
-       "3    Undergraduate         4.00    A Through F Undergraduate   \n",
-       "4    Undergraduate         4.00    A Through F Undergraduate   \n",
-       "..             ...          ...                          ...   \n",
-       "201       Graduate  0.00 - 3.00              Graduate Graded   \n",
-       "202       Graduate  0.00 - 9.00  Satisfactory/Unsatisfactory   \n",
-       "203       Graduate  0.00 - 9.00  Satisfactory/Unsatisfactory   \n",
-       "204       Graduate  0.00 - 9.00  Satisfactory/Unsatisfactory   \n",
-       "205       Graduate         0.00  Satisfactory/Unsatisfactory   \n",
-       "\n",
-       "                                Enrollment Requirement      Course Components  \\\n",
-       "0    Prerequisite: Level 3 or higher on the mathema...  (Laboratory, Lecture)   \n",
-       "1    Advisory Prerequisite: CSE 101 or basic comput...             (Lecture,)   \n",
-       "2    Prerequisite: Level 3 or higher on the mathema...  (Laboratory, Lecture)   \n",
-       "3    Prerequisite: AMS 151 or MAT 125 or MAT 131 or...  (Lecture, Recitation)   \n",
-       "4    Prerequisite: Level 5 or higher on the math pl...  (Laboratory, Lecture)   \n",
-       "..                                                 ...                    ...   \n",
-       "201                                                               (Tutorial,)   \n",
-       "202                                                               (Tutorial,)   \n",
-       "203                          Prerequisite: G5 Standing            (Tutorial,)   \n",
-       "204                          Prerequisite: G5 Standing            (Tutorial,)   \n",
-       "205                                                               (Tutorial,)   \n",
-       "\n",
-       "                    Academic Group Academic Organization  \\\n",
-       "0    Engring & App Sci, College of      Computer Science   \n",
-       "1     College of Engring & App Sci      Computer Science   \n",
-       "2     College of Engring & App Sci      Computer Science   \n",
-       "3    Engring & App Sci, College of      Computer Science   \n",
-       "4    Engring & App Sci, College of      Computer Science   \n",
-       "..                             ...                   ...   \n",
-       "201  Engring & App Sci, College of      Computer Science   \n",
-       "202  Engring & App Sci, College of      Computer Science   \n",
-       "203  Engring & App Sci, College of      Computer Science   \n",
-       "204  Engring & App Sci, College of      Computer Science   \n",
-       "205   College of Engring & App Sci      Computer Science   \n",
-       "\n",
-       "                                           Description  \n",
-       "0    Introduces central ideas of computing and comp...  \n",
-       "1    An introduction to the design of Web pages, sp...  \n",
-       "2    An introduction to fundamentals of computer sc...  \n",
-       "3    Introduction to the mathematical foundations o...  \n",
-       "4    An introduction to procedural and object-orien...  \n",
-       "..                                                 ...  \n",
-       "201  Supervised teaching in a course identified by ...  \n",
-       "202  Thesis research for PhD students who have adva...  \n",
-       "203  Prerequisite: Must be advanced to candidacy (G...  \n",
-       "204  Prerequisite: Must be advanced to candidacy (G...  \n",
-       "205                                                     \n",
-       "\n",
-       "[206 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "scrape_sbu_solar(url=url, major_three_letter_code=\"cse\", wait_time=10, headless=True, verbose=True)"
+    "# df = scrape_sbu_solar(url=url, major_three_letter_code=\"cse\", wait_time=10, headless=True, verbose=True, output_filename=\"cse.json\")\n",
+    "df = scrape_sbu_solar(\n",
+    "    url=url,\n",
+    "    major_three_letter_code=\"cse\",\n",
+    "    wait_time=10,\n",
+    "    headless=True,\n",
+    "    verbose=True,\n",
+    ")"
    ]
   },
   {
@@ -742,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2//2"
+    "df.to_json('cse.json', orient='records', indent=4)"
    ]
   },
   {
