CHORE: Test command for installing selenium

--- a/src/notebooks/test_kg.ipynb
+++ b/src/notebooks/test_kg.ipynb
@@ -351,6 +351,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = \"pip install selenium\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shlex\n",
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pip', 'install', 'selenium']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command = shlex.split(command)\n",
+    "command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: selenium in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (4.19.0)\n",
+      "Requirement already satisfied: urllib3<3,>=1.26 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.1)\n",
+      "Requirement already satisfied: trio~=0.17 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from selenium) (0.25.0)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from selenium) (0.11.1)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from selenium) (2024.2.2)\n",
+      "Requirement already satisfied: typing_extensions>=4.9.0 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from selenium) (4.10.0)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from trio~=0.17->selenium) (23.2.0)\n",
+      "Requirement already satisfied: sortedcontainers in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: idna in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from trio~=0.17->selenium) (3.6)\n",
+      "Requirement already satisfied: outcome in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from trio~=0.17->selenium) (1.3.0.post0)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from trio~=0.17->selenium) (1.3.1)\n",
+      "Requirement already satisfied: exceptiongroup in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from trio~=0.17->selenium) (1.2.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
+      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in /Users/adebayobraimah/Desktop/projects/CSE505/.env/lib/python3.10/site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['pip', 'install', 'selenium'], returncode=0)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subprocess.run(command, check=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
