DEV: Added new ergo files for sandboxing

--- a/misc/notebooks/test_kg.ipynb
+++ b/misc/notebooks/test_kg.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "import time\n",
     "import pandas as pd"
    ]
   },
@@ -60,6 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from src import RESROURCEDIR\n",
     "from src.kg.knowledge_graph import scrape_sbu_solar, KnowledgeGraph\n",
     "from src.ergoai.ergoai import json_to_ergo"
    ]
@@ -77,130 +77,67 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# majors = (\"cse\", \"ams\")\n",
-    "# majors = (\"ams\",)\n",
-    "\n",
-    "# for major in majors:\n",
-    "#     # df = scrape_sbu_solar(\n",
-    "#     #     url, major_three_letter_code=major, wait_time=10, headless=True, verbose=True\n",
-    "#     # )\n",
-    "#     # df.to_csv(f\"{major}.csv\", index=True)\n",
-    "#     # df.to_json(f\"{major}.json\", orient=\"index\", indent=4)\n",
-    "\n",
-    "#     # time.sleep(10)\n",
-    "    \n",
-    "#     json_to_ergo(json_file=f\"{major}.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ! cp cse.ergo /Users/adebayobraimah/Desktop/projects/CSE505/ergo_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Scraping course information for CSE...\n",
       "\n",
-      "Processing course: 101...\n",
-      "Processing course: 102...\n",
-      "Processing course: 110...\n",
-      "Processing course: (113)...\n",
-      "Processing course: 114...\n",
+      "Scraping course information for CHE...\n",
+      "\n",
+      "Processing course: 115...\n",
+      "Processing course: 129...\n",
       "Processing course: 130...\n",
-      "Processing course: 150...\n",
-      "Processing course: 160...\n",
-      "Processing course: 161...\n",
-      "Processing course: 190...\n",
-      "Processing course: 191...\n",
-      "Processing course: 192...\n",
-      "Processing course: (213)...\n",
-      "Processing course: 214...\n",
-      "Processing course: 215...\n",
-      "Processing course: 216...\n",
-      "Processing course: 220...\n",
-      "Processing course: 230...\n",
-      "Processing course: 260...\n",
-      "Processing course: 261...\n",
-      "Processing course: 300...\n",
+      "Processing course: 131...\n",
+      "Processing course: 132...\n",
+      "Processing course: 133...\n",
+      "Processing course: 134...\n",
+      "Processing course: 152...\n",
+      "Processing course: 154...\n",
       "Processing course: 301...\n",
+      "Processing course: 302...\n",
       "Processing course: 303...\n",
       "Processing course: 304...\n",
-      "Processing course: 305...\n",
-      "Processing course: 306...\n",
-      "Processing course: 307...\n",
       "Processing course: 310...\n",
-      "Processing course: 311...\n",
       "Processing course: 312...\n",
-      "Processing course: 316...\n",
-      "Processing course: 320...\n",
-      "Processing course: 323...\n",
-      "Processing course: 325...\n",
+      "Processing course: 321...\n",
+      "Processing course: 322...\n",
       "Processing course: 327...\n",
       "Processing course: 328...\n",
       "Processing course: 331...\n",
       "Processing course: 332...\n",
-      "Processing course: 333...\n",
-      "Processing course: 334...\n",
-      "Processing course: 336...\n",
-      "Processing course: 337...\n",
-      "Processing course: 350...\n",
+      "Processing course: 345...\n",
+      "Processing course: 346...\n",
+      "Processing course: 348...\n",
       "Processing course: 351...\n",
-      "Processing course: 352...\n",
       "Processing course: 353...\n",
-      "Processing course: 354...\n",
-      "Processing course: 355...\n",
-      "Processing course: 356...\n",
       "Processing course: 357...\n",
-      "Processing course: 360...\n",
+      "Processing course: 358...\n",
       "Processing course: 361...\n",
       "Processing course: 362...\n",
-      "Processing course: 363...\n",
-      "Processing course: 364...\n",
-      "Processing course: 366...\n",
-      "Processing course: 370...\n",
-      "Processing course: 371...\n",
-      "Processing course: 373...\n",
+      "Processing course: 375...\n",
       "Processing course: 376...\n",
-      "Processing course: 377...\n",
       "Processing course: 378...\n",
-      "Processing course: 380...\n",
-      "Processing course: 381...\n",
+      "Processing course: 379...\n",
+      "Processing course: 383...\n",
+      "Processing course: 384...\n",
       "Processing course: 385...\n",
-      "Processing course: 390...\n",
-      "Processing course: 391...\n",
-      "Processing course: 392...\n",
-      "Processing course: 393...\n",
-      "Processing course: 394...\n",
-      "Processing course: 416...\n",
+      "Processing course: 444...\n",
+      "Processing course: 459...\n",
+      "Processing course: 461...\n",
       "Processing course: 475...\n",
+      "Processing course: 476...\n",
+      "Processing course: 477...\n",
       "Processing course: 487...\n",
       "Processing course: 488...\n",
       "Processing course: 495...\n",
       "Processing course: 496...\n",
+      "Processing course: 501...\n",
       "Processing course: 502...\n",
+      "Processing course: 503...\n",
       "Processing course: 504...\n",
-      "Processing course: 505...\n",
-      "Processing course: 506...\n",
-      "Processing course: 507...\n",
-      "Processing course: 508...\n",
-      "Processing course: 509...\n",
-      "Processing course: 510...\n",
       "Processing course: 511...\n",
-      "Processing course: 512...\n",
       "Processing course: 514...\n",
       "Processing course: 515...\n",
       "Processing course: 516...\n",
@@ -212,108 +149,44 @@
       "Processing course: 523...\n",
       "Processing course: 524...\n",
       "Processing course: 525...\n",
-      "Processing course: 526...\n",
-      "Processing course: 527...\n",
       "Processing course: 528...\n",
       "Processing course: 529...\n",
       "Processing course: 530...\n",
-      "Processing course: 531...\n",
-      "Processing course: 532...\n",
-      "Processing course: 533...\n",
       "Processing course: 534...\n",
       "Processing course: 535...\n",
       "Processing course: 536...\n",
-      "Processing course: 537...\n",
-      "Processing course: 538...\n",
-      "Processing course: 540...\n",
       "Processing course: 541...\n",
       "Processing course: 542...\n",
-      "Processing course: 544...\n",
-      "Processing course: 545...\n",
-      "Processing course: 546...\n",
-      "Processing course: 547...\n",
-      "Processing course: 548...\n",
-      "Processing course: 549...\n",
-      "Processing course: 550...\n",
-      "Processing course: 551...\n",
-      "Processing course: 552...\n",
-      "Processing course: 555...\n",
-      "Processing course: 564...\n",
-      "Processing course: 566...\n",
-      "Processing course: 570...\n",
-      "Processing course: 577...\n",
+      "Processing course: 543...\n",
+      "Processing course: 558...\n",
+      "Processing course: 559...\n",
       "Processing course: 581...\n",
       "Processing course: 582...\n",
-      "Processing course: 583...\n",
-      "Processing course: 587...\n",
+      "Processing course: 586...\n",
+      "Processing course: 588...\n",
+      "Processing course: 589...\n",
       "Processing course: 590...\n",
       "Processing course: 591...\n",
-      "Processing course: 592...\n",
       "Processing course: 593...\n",
-      "Processing course: 594...\n",
-      "Processing course: 595...\n",
       "Processing course: 596...\n",
       "Processing course: 597...\n",
+      "Processing course: 598...\n",
       "Processing course: 599...\n",
-      "Processing course: 600...\n",
       "Processing course: 602...\n",
-      "Processing course: 605...\n",
-      "Processing course: 608...\n",
+      "Processing course: 603...\n",
+      "Processing course: 606...\n",
+      "Processing course: 607...\n",
       "Processing course: 610...\n",
-      "Processing course: 613...\n",
-      "Processing course: 614...\n",
-      "Processing course: 615...\n",
-      "Processing course: 617...\n",
-      "Processing course: 620...\n",
-      "Processing course: 621...\n",
-      "Processing course: 624...\n",
+      "Processing course: 611...\n",
+      "Processing course: 619...\n",
       "Processing course: 625...\n",
-      "Processing course: 626...\n",
-      "Processing course: 628...\n",
-      "Processing course: 633...\n",
-      "Processing course: 638...\n",
-      "Processing course: 639...\n",
       "Processing course: 641...\n",
-      "Processing course: 642...\n",
-      "Processing course: 643...\n",
-      "Processing course: 644...\n",
-      "Processing course: 645...\n",
-      "Processing course: 646...\n",
-      "Processing course: 648...\n",
-      "Processing course: 649...\n",
-      "Processing course: 650...\n",
-      "Processing course: 651...\n",
-      "Processing course: 652...\n",
-      "Processing course: 653...\n",
-      "Processing course: 654...\n",
-      "Processing course: 655...\n",
-      "Processing course: 656...\n",
-      "Processing course: 657...\n",
-      "Processing course: 658...\n",
-      "Processing course: 659...\n",
-      "Processing course: 660...\n",
-      "Processing course: 660...\n",
-      "Processing course: 661...\n",
-      "Processing course: 662...\n",
-      "Processing course: 663...\n",
-      "Processing course: 664...\n",
-      "Processing course: 665...\n",
-      "Processing course: 669...\n",
-      "Processing course: 670...\n",
-      "Processing course: 671...\n",
-      "Processing course: 672...\n",
-      "Processing course: 674...\n",
-      "Processing course: 677...\n",
-      "Processing course: 681...\n",
-      "Processing course: 684...\n",
-      "Processing course: 686...\n",
-      "Processing course: 687...\n",
+      "Processing course: 682...\n",
+      "Processing course: 683...\n",
       "Processing course: 690...\n",
-      "Processing course: 691...\n",
-      "Processing course: 692...\n",
       "Processing course: 693...\n",
-      "Processing course: (694)...\n",
-      "Processing course: (695)...\n",
+      "Processing course: 694...\n",
+      "Processing course: 695...\n",
       "Processing course: 696...\n",
       "Processing course: 697...\n",
       "Processing course: 698...\n",
@@ -322,25 +195,89 @@
       "Processing course: 701...\n",
       "Processing course: 800...\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
-    "kg = scrape_sbu_solar(url,major_three_letter_code='cse',wait_time=10,headless=True,verbose=True, output_filename='test.cse.json')\n",
+    "# majors = (\"cse\",)\n",
+    "# majors = (\"ams\",)\n",
+    "# majors = (\"bio\",)\n",
+    "# majors = (\"che\",)\n",
+    "# majors = (\"phy\",)\n",
+    "# majors = (\"ast\",)\n",
+    "# majors = (\"geo\",)\n",
+    "# majors = (\"mat\",) # BUG: Figure out why MAT is not working\n",
+    "\n",
+    "majors = (\n",
+    "    \"cse\",\n",
+    "    \"ams\",\n",
+    "    \"bio\",\n",
+    "    \"phy\",\n",
+    "    \"ast\",\n",
+    "    # \"mat\", # BUG: Figure out why MAT is not working\n",
+    "    \"che\",\n",
+    "    \"geo\",\n",
+    ")\n",
+    "\n",
+    "for major in majors:\n",
+    "    outname: str = os.path.join(RESROURCEDIR, f\"{major}\")\n",
+    "\n",
+    "    if not (os.path.exists(f\"{outname}_courses.json\")):\n",
+    "        kg = scrape_sbu_solar(\n",
+    "            url, major_three_letter_code=major, wait_time=10, headless=True, verbose=True\n",
+    "        )\n",
+    "        kg.df.to_csv(f\"{outname}_courses.csv\", index=True)\n",
+    "        kg.df.to_json(f\"{outname}_courses.json\", orient=\"index\", indent=4)\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "    # if not (os.path.exists(f\"{outname}_courses.ergo\")):\n",
+    "    #     json_to_ergo(json_file=f\"{outname}_courses.json\")\n",
+    "    # else:\n",
+    "    #     continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! cp cse.ergo /Users/adebayobraimah/Desktop/projects/CSE505/ergo_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# kg = scrape_sbu_solar(url,major_three_letter_code='cse',wait_time=10,headless=True,verbose=True, output_filename='test.cse.json')\n",
     "# df = scrape_sbu_solar(url, major_three_letter_code=\"ams\", wait_time=10, headless=True, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "! cp 'test.cse.json' /Users/adebayobraimah/Desktop/projects/CSE505/ergo_test"
+    "# ! cp 'test.cse.json' /Users/adebayobraimah/Desktop/projects/CSE505/ergo_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
